# connect4discord

./: Cargo.toml
src/: emojis.rs  main.rs
src/commands/: game.rs  mod.rs
