[package]
name = "connect4discord"
version = "0.1.0"
authors = ["lfenart <lucas.fenart@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
connect4 = { path = "../connect4" }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.2"
tracing-futures = "0.2"

[dependencies.tokio]
version = "0.2"
features = ["macros", "signal"]

[dependencies.serenity]
version = "0.9"
features = ["framework", "standard_framework", "collector"]
